--- a/classes/_state_valuestate_.valuestate.html
+++ b/classes/_state_valuestate_.valuestate.html
@@ -132,7 +132,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/ValueState.ts#L3">state/ValueState.ts:3</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/ValueState.ts#L3">state/ValueState.ts:3</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -155,7 +155,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#state">state</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L12">state/State.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L12">state/State.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -181,7 +181,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#dispose">dispose</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L44">state/State.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L44">state/State.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -199,7 +199,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#get">get</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L28">state/State.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L28">state/State.ts:28</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="../modules/_state_state_.html#imergedstate" class="tsd-signature-type">IMergedState</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -216,7 +216,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/ValueState.ts#L8">state/ValueState.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/ValueState.ts#L8">state/ValueState.ts:8</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -240,7 +240,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#setstate">setState</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L19">state/State.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L19">state/State.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -264,7 +264,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#subscribe">subscribe</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L33">state/State.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L33">state/State.ts:33</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -296,6 +296,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_ioc_react_useinstance_.html">"ioc-<wbr>react/use<wbr>Instance"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_ioc_react_withdependencies_.html">"ioc-<wbr>react/with<wbr>Dependencies"</a>
@@ -332,6 +335,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_usesubscription_.html">"state-<wbr>react/use<wbr>Subscription"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_arraystate_.html">"state/<wbr>Array<wbr>State"</a>
@@ -402,6 +408,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -450,7 +457,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
