--- a/interfaces/_state_react_subscribe_.iprops.html
+++ b/interfaces/_state_react_subscribe_.iprops.html
@@ -108,7 +108,7 @@
 					<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state-react/Subscribe.ts#L11">state-react/Subscribe.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state-react/Subscribe.ts#L11">state-react/Subscribe.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -139,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">dispose<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state-react/Subscribe.ts#L12">state-react/Subscribe.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state-react/Subscribe.ts#L12">state-react/Subscribe.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -149,7 +149,7 @@
 					<div class="tsd-signature tsd-kind-icon">to<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state-react/Subscribe.ts#L10">state-react/Subscribe.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state-react/Subscribe.ts#L10">state-react/Subscribe.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -192,6 +192,9 @@
 						<a href="../modules/_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_ioc_react_useinstance_.html">"ioc-<wbr>react/use<wbr>Instance"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_ioc_react_withdependencies_.html">"ioc-<wbr>react/with<wbr>Dependencies"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -226,6 +229,9 @@
 					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_usesubscription_.html">"state-<wbr>react/use<wbr>Subscription"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_arraystate_.html">"state/<wbr>Array<wbr>State"</a>
@@ -293,6 +299,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -341,7 +348,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
