--- a/classes/_state_state_.state.html
+++ b/classes/_state_state_.state.html
@@ -144,7 +144,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L13">state/State.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L13">state/State.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -166,7 +166,7 @@
 					<div class="tsd-signature tsd-kind-icon">state<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">T</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L12">state/State.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L12">state/State.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -176,7 +176,7 @@
 					<div class="tsd-signature tsd-kind-icon">subscriptions<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><a href="../modules/_state_state_.html#istatecallback" class="tsd-signature-type">IStateCallback</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> =&nbsp;[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L13">state/State.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L13">state/State.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -193,7 +193,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L44">state/State.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L44">state/State.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -210,7 +210,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L28">state/State.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L28">state/State.ts:28</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="../modules/_state_state_.html#imergedstate" class="tsd-signature-type">IMergedState</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -227,7 +227,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L24">state/State.ts:24</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L24">state/State.ts:24</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -244,7 +244,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L19">state/State.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L19">state/State.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -267,7 +267,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state/State.ts#L33">state/State.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state/State.ts#L33">state/State.ts:33</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -299,6 +299,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_ioc_react_useinstance_.html">"ioc-<wbr>react/use<wbr>Instance"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_ioc_react_withdependencies_.html">"ioc-<wbr>react/with<wbr>Dependencies"</a>
@@ -335,6 +338,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_usesubscription_.html">"state-<wbr>react/use<wbr>Subscription"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_arraystate_.html">"state/<wbr>Array<wbr>State"</a>
@@ -417,6 +423,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -465,7 +472,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
