--- a/globals.html
+++ b/globals.html
@@ -74,6 +74,7 @@
 								<li class="tsd-kind-external-module"><a href="modules/_ioc_react_dependencycontainerreactcontext_.html" class="tsd-kind-icon">"ioc-<wbr>react/<wbr>Dependency<wbr>Container<wbr>React<wbr>Context"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_ioc_react_inject_.html" class="tsd-kind-icon">"ioc-<wbr>react/<wbr>Inject"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_ioc_react_injectandsubscribe_.html" class="tsd-kind-icon">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_ioc_react_useinstance_.html" class="tsd-kind-icon">"ioc-<wbr>react/use<wbr>Instance"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_ioc_react_withdependencies_.html" class="tsd-kind-icon">"ioc-<wbr>react/with<wbr>Dependencies"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_ioc_container_.html" class="tsd-kind-icon">"ioc/<wbr>Container"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_compose_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Compose"</a></li>
@@ -86,6 +87,7 @@
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_injecttoggle_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_injectvalue_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Value"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_subscribe_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Subscribe"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_state_react_usesubscription_.html" class="tsd-kind-icon">"state-<wbr>react/use<wbr>Subscription"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_arraystate_.html" class="tsd-kind-icon">"state/<wbr>Array<wbr>State"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_booleanstate_.html" class="tsd-kind-icon">"state/<wbr>Boolean<wbr>State"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_numberstate_.html" class="tsd-kind-icon">"state/<wbr>Number<wbr>State"</a></li>
@@ -115,6 +117,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_ioc_react_useinstance_.html">"ioc-<wbr>react/use<wbr>Instance"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_ioc_react_withdependencies_.html">"ioc-<wbr>react/with<wbr>Dependencies"</a>
@@ -151,6 +156,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_state_react_usesubscription_.html">"state-<wbr>react/use<wbr>Subscription"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_arraystate_.html">"state/<wbr>Array<wbr>State"</a>
@@ -191,6 +199,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -239,7 +248,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="assets/js/main.js"></script>
