--- a/modules/_state_react_injectboolean_.html
+++ b/modules/_state_react_injectboolean_.html
@@ -97,7 +97,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/state-react/InjectBoolean.tsx#L10">state-react/InjectBoolean.tsx:10</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/fd3b428/src/state-react/InjectBoolean.tsx#L10">state-react/InjectBoolean.tsx:10</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -129,6 +129,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_ioc_react_useinstance_.html">"ioc-<wbr>react/use<wbr>Instance"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_ioc_react_withdependencies_.html">"ioc-<wbr>react/with<wbr>Dependencies"</a>
@@ -165,6 +168,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_state_react_usesubscription_.html">"state-<wbr>react/use<wbr>Subscription"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_state_arraystate_.html">"state/<wbr>Array<wbr>State"</a>
@@ -211,6 +217,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -259,7 +266,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
